kustomize/overlays/prod/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorisations-clusterip
spec:
  type: ClusterIP
  selector:
    app: authorisations-prod
    variant: prod
